--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Eniitan Dashboard App</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script   src="jquery-2.1.4.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="Dashboardapp.css">
 
 </head>
@@ -368,7 +367,7 @@
 
 		</div>
 		</main>
-
+			<script   src="jquery-2.1.4.min.js"></script>
 			<script src="Chart.bundle.min.js"></script>
 			<script type="text/javascript" src="dashboard.js"></script>
 </body>
