--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Eniitan Dashboard App</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="Dashboardapp.css">
+	<link rel="stylesheet" type="text/css" href="dashboardapp.css">
 
 </head>
 <body>
