--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h3>Eniitan<sup>TM</sup></h3>
 			<ul>
 				<li><a href="https://ogunsola.github.io" ><span id="home">Portfolio Home</span></a></li>
-				<li ><img src="icons/icon-bell.svg" id="icon-bell"></li>
+				<li ><img src="icons/icon-bell.svg" alt="icon" id="icon-bell"></li>
 				<li><div id="notifications">
 	                    <div class="notifications-menu">
 	                      <div class="notifications-menu-content">
@@ -24,7 +24,7 @@
 	                    </div>
 	           </div></li>
 				<li id="divider">|</li>
-				<li id="foto"><img src="icons/photo.jpg" ></li>
+				<li id="foto"><img src="icons/photo.jpg" alt="icon" ></li>
 				<li><span>OLUBUKOLA</span></li>
 			</ul>
 
@@ -32,10 +32,10 @@
 		<main>
 				<nav class="sidebar">
 					<ul>
-						<li><a href="#graphArea"><img src="icons/icon-dashboard.svg"></a></li>
-						<li><a href="#membersArea"><img src="icons/icon-members.svg"></a></li>
-						<li><a href="#social"><img src="icons/icon-visits.svg"></a></li>
-						<li><a href="#settingArea"><img src="icons/icon-settings.svg"></a></li>
+						<li><a href="#graphArea"><img src="icons/icon-dashboard.svg" alt="icon"></a></li>
+						<li><a href="#membersArea"><img src="icons/icon-members.svg" alt="icon"></a></li>
+						<li><a href="#social"><img src="icons/icon-visits.svg" alt="icon"></a></li>
+						<li><a href="#settingArea"><img src="icons/icon-settings.svg" alt="icon"></a></li>
 					</ul>
 				</nav>
 			<div id="majorContent">
@@ -80,7 +80,7 @@
 		<div class="socialStats">
 
 			<div id="twitter">
-				<img src="icons/icon-twitter.svg">
+				<img src="icons/icon-twitter.svg" alt="icon">
 				<div id="subscriber">
 					<h5>Twitter</h5>
 					<p>10,345</p>
@@ -88,7 +88,7 @@
 
 			</div>
 			<div id="facebook">
-				<img src="icons/icon-facebook.svg">
+				<img src="icons/icon-facebook.svg" alt="icon">
 				<div id="subscribers">
 					<h5>Facebook</h5>
 					<p>10,345</p>
@@ -96,7 +96,7 @@
 
 			</div>
 			<div id="googlePlus">
-				<img src="icons/icon-google-plus.svg">
+				<img src="icons/icon-google-plus.svg" alt="icon">
 				<div id="subscriberz">
 					<h5>Google+</h5>
 					<p>10,345</p>
@@ -104,7 +104,7 @@
 
 			</div>
 			<div id="linkedin">
-				<img src="icons/icon-linkedin.svg">
+				<img src="icons/icon-linkedin.svg" alt="icon">
 				<div id="subscriberze">
 					<h5>linkedin</h5>
 					<p>10,345</p>
@@ -112,7 +112,7 @@
 
 			</div>
 			<div id="pinterest">
-				<img src="icons/icon-pinterest.svg">
+				<img src="icons/icon-pinterest.svg" alt="icon">
 				<div id="subscriberzed">
 					<h5>pinterest</h5>
 					<p>10,345</p>
@@ -120,7 +120,7 @@
 
 			</div>
 			<div id="github">
-				<img src="icons/icon-github.svg">
+				<img src="icons/icon-github.svg" alt="icon">
 				<div id="subscribe">
 					<h5>github</h5>
 					<p>10,345</p>
@@ -135,7 +135,7 @@
 			<h3>NEW MEMBERS</h3>
 			<ul>
 				<li>
-					<img src="icons/photo.jpg">
+					<img src="icons/photo.jpg" alt="icon">
 						<div class="memberDetails">
 							<h4>Olubukola Ogunsola</h4>
 							<a href="#">Olubukola@email.com</a>
@@ -143,7 +143,7 @@
 						<p>02/14/2017</p>
 				</li>
 				<li>
-					<img src="icons/jehu.jpg">
+					<img src="icons/jehu.jpg" alt="icon">
 						<div class="memberDetails">
 							<h4>Jehu Nwaganga</h4>
 							<a href="#">Jehu@email.com</a>
@@ -151,7 +151,7 @@
 						<p>02/14/2017</p>
 				</li>
 				<li>
-					<img src="icons/kaka.jpg">
+					<img src="icons/kaka.jpg" alt="icon">
 						<div class="memberDetails">
 							<h4>Gbenga Kaka</h4>
 							<a href="#">gbenga@email.com</a>
@@ -159,7 +159,7 @@
 						<p>02/14/2017</p>
 				</li>
 				<li>
-					<img src="icons/laolu.jpg">
+					<img src="icons/laolu.jpg" alt="icon">
 						<div class="memberDetails">
 							<h4>Olaoluwa Bamgbose</h4>
 							<a href="#">Olaoluwa@email.com</a>
@@ -167,7 +167,7 @@
 						<p>02/14/2017</p>
 				</li>
 				<li>
-					<img src="icons/andrew.jpg">
+					<img src="icons/andrew.jpg" alt="icon">
 						<div class="memberDetails">
 							<h4>Andrew Mosheshe</h4>
 							<a href="#">Andrew@email.com</a>
@@ -180,7 +180,7 @@
 			<h3>RECENT ACTIVITY</h3>
 			<ul>
 				<li>
-					<img src="icons/photo.jpg">
+					<img src="icons/photo.jpg" alt="icon">
 					<div class="itemPosted">
 						<p>Olubukola posted a job opening</p>
 						<h5>1 minute Ago</h5>
@@ -188,7 +188,7 @@
 					<span>></span>
 				</li>
 				<li>
-					<img src="icons/jehu.jpg">
+					<img src="icons/jehu.jpg" alt="icon">
 					<div class="itemPosted">
 						<p>Jehu liked Olubukola's post</p>
 						<h5>1 hour Ago</h5>
@@ -196,7 +196,7 @@
 					<span>></span>
 				</li>
 				<li>
-					<img src="icons/kaka.jpg">
+					<img src="icons/kaka.jpg" alt="icon">
 					<div class="itemPosted">
 						<p>Gbenga liked Ogunsola's post</p>
 						<h5>1 hour Ago</h5>
@@ -204,7 +204,7 @@
 					<span>></span>
 				</li>
 				<li>
-					<img src="icons/laolu.jpg">
+					<img src="icons/laolu.jpg" alt="icon">
 					<div class="itemPosted">
 						<p>Laolu posted an article  </p>
 						<h5>2 hours Ago</h5>
@@ -212,7 +212,7 @@
 					<span>></span>
 				</li>
 				<li>
-					<img src="icons/andrew.jpg">
+					<img src="icons/andrew.jpg" alt="icon">
 					<div class="itemPosted">
 						<p>Andrew posted a tip</p>
 						<h5>2 hours Ago</h5>
